# TestService

./: .gitignore  README.md  RunHromeCors.bat  pyproject.toml
api/: READMDE.md  core_question.csv  core_test.csv  db.sqlite3  requirements.txt
api/api/: settings.py  urls.py
api/core/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py  viewsets.py
api/core/migrations/: 0001_initial.py  0002_remove_test_question_testquesuion.py  0002_testresult.py  0003_alter_testquesuion_question_alter_testquesuion_test.py  0003_statistic_delete_testresult_test_statistics.py  0004_remove_test_statistics_remove_test_user_test_users_and_more.py  0004_testquestion_delete_testquesuion.py  0005_alter_testquestion_question.py  0005_statistic_test_delete_teststatistic.py  0006_test_user.py  0006_testquestion_date.py  0007_question_test_alter_test_title_delete_testquestion.py  (+19 more)
api/tests/: test_endpoints.py
client/: .gitignore  README.md  index.html  nuxt.config.js  package-lock.json  package.json
client/components/: Footer.vue  Navbar.vue  Spinner.vue
client/layouts/: default.vue
client/pages/: index.vue  login.vue  profile.vue  signin.vue  signout.vue  signup.vue
client/store/: index.js
frontend/: .env.dev  .eslintrc.js  README.md  nuxt.config.js  package-lock.json  package.json
frontend/components/: QTest.vue  TestPage.vue  ThemeCard.vue
frontend/layouts/: default.vue  error.vue
frontend/pages/: index.vue  login.vue  register.vue
frontend/plugins/: vuex-persistedstate.js
frontend/store/: answers.js  index.js  profile.js  themes.js
(+11 files in other folders)
