[tool.poetry]
name = "testservice"
version = "0.1.0"
description = ""
authors = ["Roman Popov <i@romanpopoff.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.1.4"
django-cors-headers = "3.13.0"
django-ckeditor = "^6.5.1"
dj-rest-auth = "^4.0.1"
validate-email = "1.3"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
